Updated the walk_to implementation

--- a/notebooks/Find Bars Nearby.ipynb
+++ b/notebooks/Find Bars Nearby.ipynb
@@ -10,21 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f0d9ef53",
    "metadata": {},
    "outputs": [],
    "source": [
     "from arcgis.gis import GIS\n",
     "from arcgis.features import FeatureSet\n",
-    "from geopedestrian.services import solve_walking\n",
+    "from geopedestrian.services import solve_walking, walk_to\n",
     "from georapid.client import GeoRapidClient\n",
     "from georapid.factory import EnvironmentClientFactory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1f02b3e2",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "14b94ad8",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9c973076",
    "metadata": {},
    "outputs": [],
@@ -73,101 +73,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "36fbcd53",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ObjectID</th>\n",
-       "      <th>FacilityID</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>FromBreak</th>\n",
-       "      <th>ToBreak</th>\n",
-       "      <th>Shape_Length</th>\n",
-       "      <th>Shape_Area</th>\n",
-       "      <th>SHAPE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Location 1 : 10 - 15</td>\n",
-       "      <td>10</td>\n",
-       "      <td>15</td>\n",
-       "      <td>0.15438372101428938</td>\n",
-       "      <td>0.00016588132385536136</td>\n",
-       "      <td>{\"rings\": [[[13.241466144000071, 52.5223607870...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Location 1 : 5 - 10</td>\n",
-       "      <td>5</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.09693572565674625</td>\n",
-       "      <td>8.546242622503289e-05</td>\n",
-       "      <td>{\"rings\": [[[13.241915299000027, 52.5194412760...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Location 1 : 0 - 5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.028781889442187052</td>\n",
-       "      <td>2.7108911552395858e-05</td>\n",
-       "      <td>{\"rings\": [[[13.241466144000071, 52.5165217650...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   ObjectID FacilityID                  Name FromBreak ToBreak  \\\n",
-       "0         1          1  Location 1 : 10 - 15        10      15   \n",
-       "1         2          1   Location 1 : 5 - 10         5      10   \n",
-       "2         3          1    Location 1 : 0 - 5         0       5   \n",
-       "\n",
-       "           Shape_Length              Shape_Area  \\\n",
-       "0   0.15438372101428938  0.00016588132385536136   \n",
-       "1   0.09693572565674625   8.546242622503289e-05   \n",
-       "2  0.028781889442187052  2.7108911552395858e-05   \n",
-       "\n",
-       "                                               SHAPE  \n",
-       "0  {\"rings\": [[[13.241466144000071, 52.5223607870...  \n",
-       "1  {\"rings\": [[[13.241915299000027, 52.5194412760...  \n",
-       "2  {\"rings\": [[[13.241466144000071, 52.5165217650...  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "walking_geojson = solve_walking(client, lat, lon)\n",
     "walking_fset = FeatureSet.from_geojson(walking_geojson)\n",
@@ -176,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1a916f6b",
    "metadata": {},
    "outputs": [],
@@ -186,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "99f695be",
    "metadata": {},
    "outputs": [],
@@ -196,58 +105,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9ff0e358",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "038f7cd7befc4e42bfb16b36316e6041",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "MapView(layout=Layout(height='400px', width='100%'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"map-static-img-preview-3428e455-7030-45ca-8643-d7ea0eec2994\"><img src=\"\"></img></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"map-html-embed-preview-3428e455-7030-45ca-8643-d7ea0eec2994\"></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "walking_fset.sdf.spatial.plot(berlin_map)\n",
     "berlin_map"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2f59b719",
+   "metadata": {},
+   "source": [
+    "## Places Category Bars"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e00348f5",
+   "id": "27925b85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category = 13003\n",
+    "walking_result = walk_to(client, lat, lon, category)\n",
+    "places_geojson = walking_result['places']\n",
+    "places_fset = FeatureSet.from_geojson(places_geojson)\n",
+    "places_fset.sdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "419d3a29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "places_fset.sdf.spatial.plot(berlin_map)\n",
+    "berlin_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1736940b",
    "metadata": {},
    "outputs": [],
    "source": []
