--- a/notebooks/Find Bars Nearby.ipynb
+++ b/notebooks/Find Bars Nearby.ipynb
@@ -153,6 +153,29 @@
    "id": "1736940b",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "routes_geojson = walking_result['routes']\n",
+    "routes_fset = FeatureSet.from_geojson(routes_geojson)\n",
+    "routes_fset.sdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7d3aff2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "routes_fset.sdf.spatial.plot(berlin_map)\n",
+    "berlin_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3fb52c2",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
