Added the drive_from endpoint - determine which ambulance services can reach your current location

--- a/notebooks/Find Bars Nearby.ipynb
+++ b/notebooks/Find Bars Nearby.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "from arcgis.gis import GIS\n",
     "from arcgis.features import FeatureSet\n",
-    "from geopedestrian.services import solve_walking, walk_to\n",
+    "from geopedestrian.services import drive_from, solve_walking, walk_to\n",
     "from georapid.client import GeoRapidClient\n",
     "from georapid.factory import EnvironmentClientFactory"
    ]
@@ -171,9 +171,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe609b6f",
+   "metadata": {},
+   "source": [
+    "## Places Ambulance Service"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3fb52c2",
+   "id": "f38f17b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ambulance_category = 15009\n",
+    "near_lat, near_lon = 52.5062753, 13.3454184\n",
+    "driving_result = drive_from(client, near_lat, near_lon, ambulance_category)\n",
+    "places_geojson = driving_result['places']\n",
+    "places_fset = FeatureSet.from_geojson(places_geojson)\n",
+    "places_fset.sdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d2a3c01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "routes_geojson = driving_result['routes']\n",
+    "routes_fset = FeatureSet.from_geojson(routes_geojson)\n",
+    "routes_fset.sdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "390f72b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "routes_fset.sdf.spatial.plot(berlin_map)\n",
+    "berlin_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5ef8b15",
    "metadata": {},
    "outputs": [],
    "source": []
