Updated the notebook sample

--- a/notebooks/Find Bars Nearby.ipynb
+++ b/notebooks/Find Bars Nearby.ipynb
@@ -138,7 +138,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "walking_fset.sdf.spatial.plot(berlin_map)\n",
+    "walking_fset.sdf.spatial.plot(berlin_map, renderer_type='u', col='ToBreak', cmap='RdYlGn', alpha=0.35)\n",
+    "berlin_map.zoom_to_layer(walking_fset)\n",
     "berlin_map"
    ]
   },
@@ -241,7 +242,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "routes_fset.sdf.spatial.plot(berlin_map)\n",
+    "berlin_map = gis.map('Berlin, Germany')\n",
+    "routes_fset.sdf.spatial.plot(berlin_map, renderer_type='s', palette=[0, 120, 0, 130], line_width=15)\n",
+    "berlin_map.zoom_to_layer(routes_fset)\n",
     "berlin_map"
    ]
   },
