Added a new service endpoint - walk_from

--- a/notebooks/Find Bars Nearby.ipynb
+++ b/notebooks/Find Bars Nearby.ipynb
@@ -18,7 +18,7 @@
     "from arcgis.gis import GIS\n",
     "from arcgis.features import FeatureSet\n",
     "from geopedestrian.categories import CategoryRegistry\n",
-    "from geopedestrian.services import drive_from, solve_walking, walk_to\n",
+    "from geopedestrian.services import drive_from, solve_walking, walk_from, walk_to\n",
     "from georapid.client import GeoRapidClient\n",
     "from georapid.factory import EnvironmentClientFactory"
    ]
@@ -198,6 +198,40 @@
    "source": [
     "routes_fset.sdf.spatial.plot(berlin_map)\n",
     "berlin_map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20b07544",
+   "metadata": {},
+   "source": [
+    "## Places Hotels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03ddf041",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_registry = CategoryRegistry()\n",
+    "category = category_registry.find_id('Hotel')\n",
+    "near_lat, near_lon = 52.5062753, 13.3454184\n",
+    "walking_result = walk_from(client, near_lat, near_lon, category)\n",
+    "places_geojson = walking_result['places']\n",
+    "places_fset = FeatureSet.from_geojson(places_geojson)\n",
+    "places_fset.sdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48e2de19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "walking_result['routes']"
    ]
   },
   {
