--- a/notebooks/Find Bars Nearby.ipynb
+++ b/notebooks/Find Bars Nearby.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f0d9ef53",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "94b19102",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1a916f6b",
    "metadata": {},
    "outputs": [],
@@ -123,12 +123,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "99f695be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d643cbdab8e94d0392ba7f4527de97c7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "MapView(layout=Layout(height='400px', width='100%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"map-static-img-preview-a869b766-139e-4c4c-aaeb-8ca4cac9d129\"><img src=\"\"></img></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"map-html-embed-preview-a869b766-139e-4c4c-aaeb-8ca4cac9d129\"></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "berlin_map = gis.map('Berlin, Germany')"
+    "berlin_map = gis.map('Berlin, Germany')\n",
+    "berlin_map.basemap = 'osm'\n",
+    "berlin_map"
    ]
   },
   {
