Updated the 15 minutes notebook

--- a/notebooks/Fifteen Minutes Walking.ipynb
+++ b/notebooks/Fifteen Minutes Walking.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "990520d9",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,8 @@
     "from geopedestrian.categories import CategoryRegistry\n",
     "from geopedestrian.services import analyze_walking\n",
     "from georapid.client import GeoRapidClient\n",
-    "from georapid.factory import EnvironmentClientFactory"
+    "from georapid.factory import EnvironmentClientFactory\n",
+    "from ipywidgets import HBox, Layout"
    ]
   },
   {
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "9bf1182c",
    "metadata": {},
    "outputs": [],
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "id": "dbc8cce1",
    "metadata": {},
    "outputs": [],
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "53833da1",
    "metadata": {},
    "outputs": [],
@@ -116,12 +117,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "id": "3c5bb823",
    "metadata": {},
    "outputs": [],
    "source": [
-    "museum_id = category_registry.find_id('Museum')"
+    "museum_id = category_registry.find_id('Museum')\n",
+    "school_id = category_registry.find_id('Primary and Secondary School')\n",
+    "university_id = category_registry.find_id('College and University')\n",
+    "restaurant_id = category_registry.find_id('Restaurant')\n",
+    "cafe_id = category_registry.find_id('Cafe')\n",
+    "bar_id = category_registry.find_id('Bar')\n",
+    "park_id = category_registry.find_id('Park')\n",
+    "sports_id = category_registry.find_id('Sports Club')\n",
+    "residential_id = category_registry.find_id('Residential Building')\n",
+    "office_id = category_registry.find_id('Office')\n",
+    "retail_id = category_registry.find_id('Retail')\n",
+    "transport_id = category_registry.find_id('Transport Hub')"
    ]
   },
   {
@@ -134,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "5965c2c1",
    "metadata": {},
    "outputs": [],
@@ -144,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "7c368198",
    "metadata": {},
    "outputs": [],
@@ -152,19 +164,25 @@
     "def create_map_view(gis, named_location):\n",
     "    map_view = gis.map(named_location)\n",
     "    map_view.basemap = 'osm'\n",
-    "    return map_view"
+    "    return map_view\n",
+    "\n",
+    "def display_two_map_views(left_map_view, right_map_view):\n",
+    "    left_map_view.layout=Layout(flex='1 1', padding='6px', height='450px')\n",
+    "    right_map_view.layout=Layout(flex='1 1', padding='6px', height='450px')\n",
+    "\n",
+    "    return HBox([left_map_view, right_map_view])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "id": "b71dd637",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d474ba01dfd4faba75ded7032102055",
+       "model_id": "edb5d8223b6c43c0a4f871840b994ee7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -178,7 +196,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-fb8a8a60-29f8-4f21-9d67-fa048c3b38fc\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-af6b50df-5583-4db4-9d64-6b1c3382a608\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -190,7 +208,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-html-embed-preview-fb8a8a60-29f8-4f21-9d67-fa048c3b38fc\"></div>"
+       "<div class=\"map-html-embed-preview-af6b50df-5583-4db4-9d64-6b1c3382a608\"></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -207,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "id": "5bf23192",
    "metadata": {},
    "outputs": [
@@ -302,7 +320,7 @@
        "7    1         8  {\"rings\": [[[2.3666303491297653, 48.8589715192..."
       ]
      },
-     "execution_count": 41,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,8 +331,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "e05796df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b1e2a9b4c39d486e9c0fb569bd7fbc71",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "MapView(layout=Layout(height='400px', width='100%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"map-static-img-preview-67692663-b192-4d71-8ebc-7e2bd424b304\"><img src=\"\"></img></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"map-html-embed-preview-67692663-b192-4d71-8ebc-7e2bd424b304\"></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "barcelona_map = create_map_view(gis, 'Barcelona, Spain')\n",
+    "barcelona_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "d314d80e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hits</th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>SHAPE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{\"rings\": [[[2.15837150178505, 41.395660534716...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{\"rings\": [[[2.1607053933550167, 41.3956605347...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{\"rings\": [[[2.1642062307099654, 41.3931334309...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>{\"rings\": [[[2.1700409596348806, 41.3804964386...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>{\"rings\": [[[2.1723748512048466, 41.3825185224...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{\"rings\": [[[2.175875688559796, 41.38201300738...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>{\"rings\": [[[2.175875688559796, 41.38403504405...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>{\"rings\": [[[2.1770426343447786, 41.3835295407...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>{\"rings\": [[[2.1782095801297614, 41.3810019654...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  hits  OBJECTID                                              SHAPE\n",
+       "0    1         1  {\"rings\": [[[2.15837150178505, 41.395660534716...\n",
+       "1    1         2  {\"rings\": [[[2.1607053933550167, 41.3956605347...\n",
+       "2    1         3  {\"rings\": [[[2.1642062307099654, 41.3931334309...\n",
+       "3    1         4  {\"rings\": [[[2.1700409596348806, 41.3804964386...\n",
+       "4    1         5  {\"rings\": [[[2.1723748512048466, 41.3825185224...\n",
+       "5    1         6  {\"rings\": [[[2.175875688559796, 41.38201300738...\n",
+       "6    1         7  {\"rings\": [[[2.175875688559796, 41.38403504405...\n",
+       "7    1         8  {\"rings\": [[[2.1770426343447786, 41.3835295407...\n",
+       "8    1         9  {\"rings\": [[[2.1782095801297614, 41.3810019654..."
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plot_urban_walking(barcelona_map, client, museum_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "44284c11",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ba95bf89580d431a90789a8829a8d327",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(MapView(jupyter_target='notebook', layout=Layout(flex='1 1', height='450px', padding='6px'), re…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display_two_map_views(paris_map, barcelona_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43ae1251",
    "metadata": {},
    "outputs": [],
    "source": []
